# B-DEV-500-BAR-5-1-area-2024

./: .gitignore  README.md  SETUP.md
.github/workflows/: build.yaml  docs.yaml  playwright.yml
demo/server/: README.md
demo/server/python/: README.md  pyproject.toml
demo/server/python/todo_app/: __main__.py  database.py  main.py  models.py  schemas.py
demo/server/python/todo_app/routers/: todos.py
e2e-testing/: package-lock.json  package.json  playwright.config.ts
e2e-testing/fixtures/: fixtures.ts
e2e-testing/tests/: login.spec.ts
mobile/: .env  README.md  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile-android/: .gitignore  README.md  app.json  eas.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile-android/app/: _layout.tsx  index.tsx  new-workflow.tsx  workflow-v2.tsx
mobile-android/asyncStorageLibrary/: basicRequestVars.ts
mobile-android/components/: AreaInListCard.tsx  BasicButton.tsx  Button.tsx  ChangePasswordModal.tsx  DropdownSelector.tsx  ErrorMessage.tsx  IconButton.tsx  ServicesList.tsx  TextBox.tsx  TextInput.tsx  WorkflowList.tsx  workflowDetails.tsx
mobile-android/constants/: Colors.ts
mobile-android/services/: api.ts  area-composition.ts  service-management.ts  types.ts  user-management.ts
mobile/app/: _layout.tsx  index.tsx  modal.tsx
server/: ACTION-REACTION-TWITCH.md  README.md
server/docs/: index.ts  (+6 more)
www/: .gitignore  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
(+296 files in other folders)
